fix: align icon in notifications on top

--- a/src/angular-business/notification-toast/notification-toast-container.component.scss
+++ b/src/angular-business/notification-toast/notification-toast-container.component.scss
@@ -67,6 +67,7 @@ $sbbBusiness: true;
     border: none;
     background: none;
     padding: 0;
+    align-self: flex-start;
   }
 
   .sbb-notification-toast-icon-close-wrapper {
